--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Koleksi Buku</title>
+  <title>Koleksi Buku Pribadi</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-  <h1>Koleksi Buku Saya</h1>
+  <h1>Koleksi Buku Pribadi</h1>
 
   <form id="bukuForm">
     <input type="text" id="judul" placeholder="Judul Buku" required>
